--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body onload="digitalClock()">
     <div id ="clock">     </div>
         <div id = "text">
-            <p><h2>I recommend you take care of the minutes and the hours will take care of themselves.</h2></p>
+            <p>I recommend you take care of the minutes and the hours will take care of themselves.</p>
         </div>
 
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous">
