--- a/day.html
+++ b/day.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Digital Clock</title>
+    <title>Today's Date</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-    <link rel ="stylesheet" href ="styles/clock.css">
-    <script src="scripts/clock.js"></script>
     <script src="scripts/day.js"></script>
 </head>
-<body onload="digitalClock()">
-    <div id ="clock">     </div>
-        <div id = "text">
-            <p>I recommend you take care of the minutes and the hours will take care of themselves.</p>
+<body> 
         
-You know the time, <a href="day.html">TODAY IS</a>
+
+<a href="day.html">TODAY IS</a>
 </div>
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous">
         </script>
