--- a/day.html
+++ b/day.html
@@ -10,34 +10,48 @@
     <link rel ="stylesheet" href ="styles/style.css">
     
 </head>
-<p id="demo"></p>
 
-<script>
-var day;
-switch (new Date().getDay()) {
-  case 0:
-    day = "Sunday";
-    break;
-  case 1:
-    day = "Monday";
-    break;
-  case 2:
-    day = "Tuesday";
-    break;
-  case 3:
-    day = "Wednesday";
-    break;
-  case 4:
-    day = "Thursday";
-    break;
-  case 5:
-    day = "Friday";
-    break;
-  case  6:
-    day = "Saturday";
-}
-document.getElementById("demo").innerHTML = "Today is " + day;
-</script>
+  <script>
+  
+  function getDayString(num)
+  {
+    var day;
+    switch(num)
+    {
+      case 0:
+        day="Sunday";
+        break;
+      case 1:
+        day="Monday";
+        break;
+      case 2:
+        day="Tuesday";
+        break;
+      case 3:
+        day="Wednesday";
+        break;
+      case 4:
+        day="Thursday";
+        break;
+      case 5:
+        day="Friday";
+        break;
+      case 6:
+        day="Saturday";
+        break;
+      default:
+        day="Invalid day";
+    }
+    return day;
+  }
+
+  theDate = new Date();
+
+  document.write("Today is ",getDayString(theDate.getDay()));
+
+  
+  </script>
+  </html>
 
 </body>
 </html>
